--- a/Client/App.xaml
+++ b/Client/App.xaml
@@ -1,7 +1,7 @@
-﻿<Application x:Class="Client.App"
+﻿<Application x:Class="Desktop.App"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-             xmlns:local="clr-namespace:Client"
+             xmlns:local="clr-namespace:Desktop"
              StartupUri="MainWindow.xaml">
     <Application.Resources>
          
